z-index fix again

--- a/public/styles/landing-page.css
+++ b/public/styles/landing-page.css
@@ -69,7 +69,7 @@ select{
     padding: 10px;
     background-color: #fff;
     width: 250px;
-    z-index: -100;
+    z-index: 100;
 }
 
 .mynetwork {
